@@ -4,6 +4,8 @@ Revision history for Perl extension Text::LookUpTable.
 
   [Jeremiah Mahler]
   * Added load_blank for creating a blank table.
+  * Added set_x_coords and set_y_coords for assigning the
+    coordinate values.
 
 
 0.04  Thu, 29 Jul 2010 21:37:59 -0700
